pages/styles.css
/* ... */
.btnLimpar:focus {
    background-color: #bd3330;
}


.btnGerarPDF {
    width: 419px;
    margin-top: 0px;
    margin-left: 0px;
    height: 40px;
    
}

.btnLimparPDF {
    width: 204px;
    margin-top: 10px;
    background-color: #bd3330;
    height: 40px;
    border: #bd3330;
    opacity: 1;
    margin-bottom: 10px;   
}
.btnLimparPDF:hover {
    background-color: #bd3330;
    opacity: 0.9;
}


@media screen and (max-width: 285px) {
    .btnFilter {
        width: 100%;
    }
    .btnLimpar {
        width: 100%;
    }
}


@media screen and (max-width:767px) {
    .btnGerarPDF {
        width: 100%;
    }
    .btnFilterPDF {
        width: 100%;
        margin-bottom: 0px;
    }
    .btnLimparPDF {
        width: 100%;
    }
}

@media screen and (min-width:1247px) {
    .header {
        display: flex;
        flex-direction: row;
        justify-content: space-around;
        align-items: center;
    }
  
}



.filtername {
    font-family: 'Segoe';
    font-weight: bold;
    color: #bd3330;
    font-size: 20px; 
    margin-top: 0px;
    margin-right: 10px;
    margin-bottom: 0px;
}
.mult-escolha {
    font-family: 'Segoe';
    margin-top: 10px;
    color: #707070;
}

.ce {
    font-family: 'Segoe';
    margin-top: 10px;
    color: #707070;
}

@media screen and (max-width:600px) {

    .filtername {
        margin-bottom: 25px;
    }
  
}



.TitlePergunta {
    font-family: 'Segoe';
    color: 	#4F4F4F;
    margin-top: 10px;
    font-size: 15px;
    margin-left: 5px;
}
.descPergunta {
    font-family: 'Segoe';
    font-weight: bold;
    font-size: 15px;
    color: #808080;
    margin-right: 2px;
    margin-left: 5px;
}
.dataPerguntaAll {
    font-family: 'Segoe';
    font-size: 15px;
    color: 	#808080;
    margin-left: 1px;
    margin-right: 1px;
}

.dataMateria {
    font-family: 'Segoe';
    font-size: 15px;
    color: 	#808080;
    margin-left: 5px;
    margin-right: 1px;
}

.alternativa {
    font-family: 'Segoe';
    font-size: 15px;
    color:#4F4F4F;
    margin-top: 10px;
}

.alternativa:hover {
    cursor: pointer;
}

.certo-errado:hover {
    cursor: pointer;
}

.separadorQuestão {
    width: 100%;
    border-bottom: 3px solid #A9A9A9;
    margin-bottom: 10px;
    margin-top: 10px;
    margin-left: 0px;
}
.ContainerAlternativa {
    padding: 0px;
    width: 36px;
    height: 36px;
    border: 2px solid #cb605d;
    border-radius: 50%;
    /* padding: 0px; */
    /* margin: 0px; */
    margin-right: 5px;
    margin-top: 0px;
    opacity: 0.8;
    background-color: white;
}
.ContainerAlternativa:focus {
    /* background-color: #cb605d; */
    outline: none;
}

.btnResponder {
    margin-top: 10px;
    margin-bottom: 5px;
    background-color: #BD3330;
    border: none;
    width: 235px;
    margin-left: -15px;
    height: 40px;
}

.btnResponder:hover {
    opacity: 0.8;
    background-color: #bd3330;
}

.btnResponder:focus {
    background-color: #bd3330;
}

.btnResponder:active {
    background-color: #bd3330;
}



.btnVisuJust {
    /* background-color: white; */
    margin-top: 1px;
    margin-bottom: 10px;
    border: 1px solid #afc2d3;
    width: 235px;
    height: 40px;
    margin-left: -15px;
    
}


.btnVisuJust:hover {
    opacity: 0.8;
    /* background-color: #93acc4; */
    border: 2px solid #93acc4;
}
.btnVisuJust:focus {
    outline: none;
    border: none;
}

.containerJust {
    width: 100%;
    height: auto;
    padding: 10px;
    border: 1px solid #b8aeae;
    margin-bottom: 10px;
    word-break: break-word;
    border-radius: 2px;
    margin-left: 0px;
}

.textJust {
    font-family: 'Segoe';
    font-size: 15px;
    color: #808080; 
}

@media screen and (max-width: 386px) {
    
    .btnVisuJust{
        width: 100%;
    }
    .btnResponder {
        width: 100%;
    }
}



.questao {
    height: 35px;
    border: 2px solid #808080;
    display: flex;
    justify-content: left;
    border-radius: 5px;
    background-color:transparent;
    margin-top: 0px;
    width: 100%;
    margin-left: 0px;
    
}

.questaoTitle {
    font-family: 'Segoe' sans-serif;
    font-size: 15px;
    color: #696969;
    font-weight: bold;
    margin-top: 3px;
}

.ContainerDescPergunta {
    display: flex;
    /* align-items: left; */
    /* justify-content: left; */
    border-bottom: 1px solid #C0C0C0;
    margin-top: 15px;
    width: 100%;
    margin-left: 0px;
}

.paginacao {
    display: flex;
    align-items: center;
    justify-content: center;
}
.paginaAtual {
    font-family: 'Segoe';
    font-size: 25px;
    font-weight: bold;
    color: black;
    border-bottom: 1px solid black; 
}

.btnpages:focus {
   outline: none;
}

.totalPaginas {
    font-family: 'Segoe' sans-serif;
    font-size: 15px;
    color: #808080;
    margin-right: 0px;
}
.option-filter {
    font-size: 20px;
    color: black;
}

.input-informativo {
    width: 230px;
    margin-right: 10px;
    margin-top: 10px;
}

.content-checkbox {
    width: 25px;
    height: 25px;
    background-color: rgba(203,96,93,255,0.3);
    margin-top: 10px;
    opacity: 0.4;
    border: 1px solid #cb605d;
    margin-right: 5px;
}

.content-checkbox-checked {
    width: 25px;
    height: 25px;
    background-color: #DF9D9C;
    margin-top: 10px;
    border: 1px solid #cb605d;
    margin-right: 5px;
}


.content-checkbox:hover {
    cursor: pointer;
}

.content-checkbox-checked:hover {
    cursor: pointer;
}



.btnAlter {
    width: 45px;
    height: 45px;
    border: none;
    outline: none;
    border-radius: 50%;
    background-color: transparent;

}

.ContainerFiltros {
    border: 1px solid #808080;
    background-color: #FFFAFA;
    width: 710px;
    margin-top: 0px;
    display: flex;
    flex-wrap: wrap;
    padding: 10px;
    border-radius: 5px;
    margin-left: 0px;
    margin-right: 10px;
    margin-bottom: 5px;
}

@media screen and (max-width:519px) {
    .ContainerFiltros {
        display: flex;
        flex-direction: column;
      
    }
}
/* ... */

